bin_PROGRAMS = fastme

fastme_SOURCES = \
	fastme.c		fastme.h		\
	BIONJ.c			BIONJ.h			\
	bme.c			bme.h			\
	bNNI.c			bNNI.h			\
	distance.c		distance.h		\
	gme.c			gme.h			\
	graph.c			graph.h			\
	heap.c			heap.h			\
	inputs.c		inputs.h		\
	interface_options.c	interface_options.h	\
	interface_utilities.c	interface_utilities.h	\
	MVR.c			MVR.h			\
	newick.c		newick.h		\
	NNI.c			NNI.h			\
	p_bootstrap.c		p_bootstrap.h		\
	p_models.c		p_models.h		\
	p_eigen.c		p_eigen.h		\
	p_lk.c			p_lk.h			\
	p_optimiz.c		p_optimiz.h		\
	p_utils.c		p_utils.h		\
	random.c		random.h		\
	SPR.c			SPR.h			\
	traverse.c		traverse.h		\
	utils.c			utils.h
#	TBR.c			TBR.h			\
#fastme_LDADD = -lm

